--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,7 +79,7 @@ layout: compress
     var sjs = SimpleJekyllSearch({
       searchInput: document.getElementById('search-input'),
       resultsContainer: document.getElementById('search-results'),
-		      json: '{{ site.url }}{{ site.baseurl }}/search.json',
+		      json: 'https://{{ site.url }}/search.json',
       searchResultTemplate: '<li><a href="{url}" title="{description}">{title}</a></li>',
       noResultsText: 'No results found..',
       limit: 10,
