--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,10 +29,10 @@
   
 
   
-    <link rel="shortcut icon" href="{{ site.url }}{{ site.baseurl }}/favicon.png">
-    <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.url }}{{ site.baseurl }}/atom.xml">
-    <link rel="alternate" type="application/json" title="{{ site.title }}" href="{{ site.url }}{{ site.baseurl }}/feed.json" />
-    <link rel="sitemap" type="application/xml" title="sitemap" href="{{ site.url }}{{ site.baseurl }}/sitemap.xml" />
+    <link rel="shortcut icon" href="/images/pang.png">
+    <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/atom.xml">
+    <link rel="alternate" type="application/json" title="{{ site.title }}" href="/feed.json" />
+    <link rel="sitemap" type="application/xml" title="sitemap" href="/sitemap.xml" />
       
   {% if site.googlewebfonts %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
