--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   
-  <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/syntax.css">
+  
+  <link rel="stylesheet" href="/assets/css/syntax.css">
   <link rel="preconnect" href="https://cdnjs.cloudflare.com">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -27,10 +29,10 @@
   
 
   
-    <link rel="shortcut icon" href="{{ site.url }}{{ site.baseurl }}/favicon.png">
-    <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.url }}{{ site.baseurl }}/atom.xml">
-    <link rel="alternate" type="application/json" title="{{ site.title }}" href="{{ site.url }}{{ site.baseurl }}/feed.json" />
-    <link rel="sitemap" type="application/xml" title="sitemap" href="{{ site.url }}{{ site.baseurl }}/sitemap.xml" />
+    <link rel="shortcut icon" href="/images/pang.png">
+    <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/atom.xml">
+    <link rel="alternate" type="application/json" title="{{ site.title }}" href="/feed.json" />
+    <link rel="sitemap" type="application/xml" title="sitemap" href="/sitemap.xml" />
       
   {% if site.googlewebfonts %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
